--- a/Learning.ipynb
+++ b/Learning.ipynb
@@ -2,8 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "745b53df-40ef-4b06-b131-f8d75b7575d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hellow world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hellow world\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "77833551-1693-4a17-88c0-d384ac353765",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "who is there\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"who is there\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a1652e49-1fbf-4f91-8840-cf2803432833",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "its awais Ali\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"its awais Ali\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69c71ec8-49e5-4fa0-96b7-b54b45813430",
    "metadata": {},
    "outputs": [],
    "source": []
