--- a/Learning.ipynb
+++ b/Learning.ipynb
@@ -56,8 +56,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "69c71ec8-49e5-4fa0-96b7-b54b45813430",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "it me\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"it me\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "debd83e6-d77e-471b-af0d-1c57db8ad866",
    "metadata": {},
    "outputs": [],
    "source": []
